<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="257dp"
        android:text="@string/phon_number"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edt_LOGIN_phone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="280dp"
        android:layout_marginRight="40dp"
        android:autofillHints="@string/app_name"
        android:background="@drawable/inputs_design"
        android:hint="@string/phone_number"
        android:inputType="text"
        android:padding="11dp"
        android:textColor="#000"
        android:textColorHint="#FFF"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="346dp"
        android:text="@string/password"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edt_LOGIN_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_LOGIN_phone"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="42dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/inputs_design"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="11dp"
        android:textColor="#000"
        android:textColorHint="#FFF" />

    <LinearLayout
        android:id="@+id/layout_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_LOGIN_password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:orientation="horizontal">

        <com.rey.material.widget.CheckBox
            android:id="@+id/remember_me"
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:gravity="center_vertical"
            android:text="@string/remember_me"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold"


            />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="21dp"
            android:text="@string/forget_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="66dp"
        android:background="@drawable/buttons"
        android:padding="5dp"
        android:text="@string/login"
        android:textColor="#fff"

        android:textSize="20sp" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:padding="5dp"
        android:id="@+id/tv_admin"
        android:text="@string/i_am_an_admin"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="0dp"
        android:padding="5dp"
        android:id="@+id/tv_not_admin"
        android:text="@string/i_am_not_an_admin"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="invisible"/>


</RelativeLayout>