<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ProductDetailActivity">

    <ImageView
        android:id="@+id/detailed_product_image"
        android:layout_width="280dp"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/detail_product_name"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_below="@+id/detailed_product_image"
        android:layout_alignStart="@+id/detail_product_description"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/produ_name"
        android:textColor="#000" />

    <TextView
        android:id="@+id/detail_product_price"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_below="@+id/detail_product_name"
        android:layout_alignStart="@+id/detail_product_name"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/prod_price"
        android:textColor="#000" />

    <TextView
        android:id="@+id/detail_product_description"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_below="@+id/detail_product_price"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/prod_description"
        android:textColor="#000" />

    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
        android:id="@+id/elegent_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_product_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        app:finalNumber="20"
        app:initialNumber="1"
        app:textSize="13sp">


    </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttons"
        android:layout_margin="20dp"
        android:text="@string/add_product_to_cart"
        android:textColor="#fff"
        android:textSize="15sp"
        android:id="@+id/fab_pr_de"
        android:textStyle="bold"/>


</RelativeLayout>