<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".KishanCallCentre">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:src="@drawable/hqdefault"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
            android:id="@+id/kishan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kishan_call_centre"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/kcc"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:textAlignment="center"
            android:textColor="#255999"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="How To Register By SMS"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            />
        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/kcc2"
            android:layout_gravity="center"
            android:textSize="10sp"
            android:textColor="#255999"
            android:textAlignment="center"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:inputType="textEmailAddress"
            android:id="@+id/edt1"
            android:layout_gravity="center"
            android:hint="@string/post_your_queries_here"
            android:background="@drawable/inputs_design"
            android:textAlignment="center"
            />
        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttons"
            android:textAlignment="center"
            android:text="POST"
            android:id="@+id/post"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_gravity="center"

            />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/o"
    android:layout_marginTop="15dp"
    android:textStyle="bold"
    android:textSize="25sp"
android:textAlignment="center"    />
        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/buttons"
            android:text="@string/call_us"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#fff"
            android:id="@+id/call"
android:layout_gravity="center"
            />

    </LinearLayout>
</ScrollView>

</LinearLayout>
