<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent"
    tools:context=".Amin_Add_New_ProductActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/select_product_image"
        android:scaleType="centerCrop"
        android:cropToPadding="false"
        android:id="@+id/select_imageview"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_design"
        android:id="@+id/product_name"
        android:layout_below="@+id/select_imageview"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:inputType="textMultiLine"
        android:hint="@string/service_name"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_design"
        android:id="@+id/product_description"
        android:layout_below="@+id/product_name"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:inputType="textMultiLine"
        android:hint="@string/service_description"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_design"
        android:id="@+id/product_price"
        android:layout_below="@+id/product_description"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:inputType="textMultiLine"
        android:hint="@string/service_price"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_design"
        android:id="@+id/product_city"
        android:layout_below="@+id/product_price"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:inputType="textMultiLine"
        android:hint="@string/service_city"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_design"
        android:id="@+id/product_status"
        android:layout_below="@+id/product_city"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:inputType="textMultiLine"
        android:hint="@string/service_price"
        />

    <Button
        android:id="@+id/btn_Add_new_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_status"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/buttons"
        android:padding="10dp"
        android:text="@string/add_product"
        android:textAllCaps="false"
        android:textColor="#fff" />

</RelativeLayout>