<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="15dp"
    app:cardCornerRadius="20dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="10dp">

        <TextView
            android:id="@+id/cart_product_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/prod_name"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/cart_product_quantity"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="10dp"
            android:text="@string/product_quantity"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textStyle="bold|italic"

            />


        <TextView
            android:id="@+id/cart_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cart_product_name"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/prodct_price"
            android:textColor="#fff"
            android:textSize="14sp"
            android:textStyle="bold|italic"


            />

    </RelativeLayout>


</android.support.v7.widget.CardView>