<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".SettinsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/close_settings_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="Close"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/update_account_settings_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="10dp"
                    android:text="Update"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/username"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/setting_username"
            />

        <TextView
            android:id="@+id/profile_image_change_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:text="@string/you_can_update_your_details_here"
            android:textAlignment="center"
            android:textSize="10sp"
            android:textStyle="bold|italic" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/inputs_design"
            android:backgroundTint="#ec1641"
            android:text="@string/change_profile_pic"
            android:textColor="#fff"
            android:textSize="11sp"
            android:textAllCaps="false"
            android:id="@+id/setting_cp"

            />

        <EditText
            android:id="@+id/settings_phone_number"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="90dp"
            android:hint="@string/mobile_no"
            android:inputType="phone"
            android:textColor="#000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/settings_full_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="145dp"
            android:hint="@string/name"
            android:inputType="textMultiLine"
            android:textColor="#000"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/settings_address"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="185dp"
            android:hint="@string/address"
            android:inputType="textMultiLine"
            android:textColor="#000"
            android:textSize="16sp" />



    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:clipChildren="true"
        app:cardCornerRadius="54dp"
        app:cardElevation="11dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp" />
    </android.support.v7.widget.CardView>
</RelativeLayout>